--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,10 @@ target 'sampleProject' do
     :hermes_enabled => false
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'sampleProjectTests' do
     inherit! :complete
     # Pods for testing
